[package]
name = "hunt-the-wumpus"
description = "A text-based game where you try to slay a wumpus."
version = "0.2.0"
authors = ["Maxwell Anderson <zaechus@proton.me>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Maxgy/hunt-the-wumpus-rs"
keywords = ["text", "game"]
categories = ["games", "game-engines"]

[dependencies]
rand = "0.8"
